Añadiendo conf a readme

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,14 +9,14 @@ spring.redis.host=localhost
 spring.redis.port=9323
 
 # URL jdbc de conexión a la base de datos
-spring.datasource.url=jdbc:h2:./ezbooks
+#spring.datasource.url=jdbc:h2:./ezbooks
 
 # Usuario y contraseña de la base de datos
-spring.datasource.username=admin
-spring.datasource.password=admin
+#spring.datasource.username=admin
+#spring.datasource.password=admin
 
 # Consola de H2 en http://localhost:{server.port}/h2-console
-spring.h2.console.enabled=true
+#spring.h2.console.enabled=true
 
 # Habilitamos los mensajes sql en el log
 spring.jpa.show-sql=true
