Añadido configuracion de desarrollo y demo de la interfaz al readme

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,24 +1,22 @@
-
 # Puerto de la aplicación
 server.port=21000
 spring.mvc.locale=es_ES
 spring.mvc.locale-resolver=fixed
-# Configuración del almacenamiento de sesiones con Redis
+spring.thymeleaf.cache=false
+
+# Configuración del almacenamiento de sesiones usuarios con Redis
 spring.session.store-type=redis
 spring.redis.host=localhost
 spring.redis.port=9323
 
-# URL jdbc de conexión a la base de datos
-#spring.datasource.url=jdbc:h2:./ezbooks
-
-# Usuario y contraseña de la base de datos
-#spring.datasource.username=admin
-#spring.datasource.password=admin
-
-# Consola de H2 en http://localhost:{server.port}/h2-console
-#spring.h2.console.enabled=true
+# URL jdbc de conexión a la base de datos en local
+spring.datasource.url=jdbc:h2:./ezbooks
+spring.datasource.username=admin
+spring.datasource.password=admin
+spring.h2.console.enabled=true 
+# Para consola de H2 http://localhost:{server.port}/h2-console
 
 # Habilitamos los mensajes sql en el log
 spring.jpa.show-sql=true
 
-spring.thymeleaf.cache=false
+
