--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,12 +9,19 @@ spring.session.store-type=redis
 spring.redis.host=localhost
 spring.redis.port=9323
 
-# URL jdbc de conexión a la base de datos en local
-spring.datasource.url=jdbc:h2:./ezbooks
-spring.datasource.username=admin
-spring.datasource.password=admin
-spring.h2.console.enabled=true 
+# Configuración del almacenamiento datos con H2 local - Desarrollo
+# spring.datasource.url=jdbc:h2:./ezbooks
+# spring.datasource.username=admin
+# spring.datasource.password=admin
+# spring.h2.console.enabled=true
 # Para consola de H2 http://localhost:{server.port}/h2-console
+
+# Configuración del almacenamiento datos con MySQL #NOTA: nombres de tablas en minusculas y separaciones con_guion_bajo
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/ezbooks_db_test?allowPublicKeyRetrieval=true&useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=trueuseLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=secure
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Habilitamos los mensajes sql en el log
 spring.jpa.show-sql=true
